@@ -40,6 +40,8 @@ ok(SPVM::TestCase::Net::SSLeay->ASN1_OBJECT);
 
 ok(SPVM::TestCase::Net::SSLeay->ASN1_STRING);
 
+ok(SPVM::TestCase::Net::SSLeay->ASN1_OCTET_STRING);
+
 my $end_memory_blocks_count = $api->get_memory_blocks_count;
 is($end_memory_blocks_count, $start_memory_blocks_count);
 
