@@ -9,6 +9,8 @@
     * Add Net::SSLeay::ASN1_OBJECT#new method.
     * Add Net::SSLeay::ASN1_STRING#new method.
     * Add Net::SSLeay::ASN1_STRING#set method.
+    * Add Net::SSLeay::ASN1_OCTET_STRING#new method.
+    * Add Net::SSLeay::ASN1_OCTET_STRING#set method.
     
   [Bug Fix]
     * Fix bugs that exception messages for SSL are not shown well.
